--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,16 +23,21 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.8
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version-file: package.json
+          cache: 'pnpm'
       - name: Setup NPM token
         run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
-      - name: Install
-        run: yarn install --frozen-lockfile --non-interactive
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
       - name: Build
-        run: yarn run build
+        run: pnpm run build
       - name: Release
         run: npx semantic-release
         env:
