--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@defuse/swap-facade",
+  "name": "@defuse-protocol/swap-facade",
   "version": "1.0.0",
   "description": "XState implementation of a swap machine",
   "author": "Defuse Protocol",
