--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
           cache: "pnpm"
 
       - run: pnpm install
-      - run: pnpm format:check
+      - run: pnpm check
       - run: pnpm test
