--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
   "files": { "ignoreUnknown": false, "ignore": ["dist/*", "package.json"] },
   "formatter": {
     "enabled": true,
-    "useEditorconfig": true,
+    "useEditorconfig": false,
     "formatWithErrors": false,
     "indentStyle": "space",
     "indentWidth": 2,
@@ -21,10 +21,10 @@
       "jsxQuoteStyle": "double",
       "quoteProperties": "asNeeded",
       "trailingCommas": "all",
-      "semicolons": "asNeeded",
+      "semicolons": "always",
       "arrowParentheses": "always",
       "bracketSameLine": false,
-      "quoteStyle": "single",
+      "quoteStyle": "double",
       "attributePosition": "auto",
       "bracketSpacing": true
     }
