--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@playwright/test": "^1.39.0",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/exec": "^6.0.3",
@@ -46,6 +48,8 @@
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
     "c8": "^10.1.2",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "playwright": "^1.39.0",
     "semantic-release": "^24.1.2",
     "typescript": "^5.5.4",
