--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:run": "vitest run",
     "test:inspect": "VITE_INSPECT=true vitest --browser",
     "test:coverage": "vitest run --coverage",
-    "check": "biome check"
+    "check": "biome check",
+    "prepare": "husky"
   },
   "keywords": [],
   "dependencies": {
@@ -54,6 +55,11 @@
     "semantic-release": "^24.1.2",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "pnpm biome check --write"
+    ]
   },
   "engines": {
     "node": ">=20.13.1"
